# start/routes.ts
@@ -20,9 +20,33 @@ router.get('docs/swagger.json', [DocsController, 'swagger']).as('docs.swagger')
 
 /*
 |--------------------------------------------------------------------------
+| COLLECTIONS Routes
+|--------------------------------------------------------------------------
+*/
+const CollectionsController = () => import('#controllers/collections_controller')
+router
+  .resource('collections', CollectionsController)
+  .only(['index', 'show'])
+  .where('id', router.matchers.number())
+
+/*
+|--------------------------------------------------------------------------
 | MOVIES Routes
 |--------------------------------------------------------------------------
 */
 const MoviesController = () => import('#controllers/movies_controller')
-router.resource('movies', MoviesController).only(['index', 'show'])
-router.get('movies/:id/stream', [MoviesController, 'stream']).as('movies.stream')
+router
+  .resource('movies', MoviesController)
+  .only(['index', 'show'])
+  .where('id', router.matchers.number())
+router
+  .get('movies/:id/stream', [MoviesController, 'stream'])
+  .as('movies.stream')
+  .where('id', router.matchers.number())
+
+/*
+|--------------------------------------------------------------------------
+| TV SHOWS Routes
+|--------------------------------------------------------------------------
+*/
+const TVShowsController = () => import('#controllers/tvs_controller')
